--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ description = "A PEG parser to read OpenSCAD language source code."
 readme = "README.rst"
 requires-python = ">=3.7"
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: Manufacturing",
