--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,13 @@ maintainers = [
 ]
 description = "A PEG parser to read OpenSCAD language source code."
 readme = "README.rst"
+license = "MIT"
 requires-python = ">=3.7"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: Manufacturing",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX",
