--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,18 @@
 [build-system]
-requires = [
-    "setuptools>=61.0",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["uv_build>=0.8.22,<=0.9.20"]
+build-backend = "uv_build"
 
 [project]
 name = "openscad_parser"
-version = "0.9.2"
+version = "0.9.5"
+description = "A PEG parser to read OpenSCAD language source code, with optional AST tree generation."
+readme = "README.rst"
 authors = [
   { name="Revar Desmera", email="revarbat@gmail.com" },
 ]
 maintainers = [
   { name="Revar Desmera", email="revarbat@gmail.com" },
 ]
-description = "A PEG parser to read OpenSCAD language source code."
-readme = "README.rst"
 license = "MIT"
 requires-python = ">=3.7"
 classifiers = [
@@ -50,3 +47,10 @@ dev = [
 "Releases" = "https://github.com/belfryscad/openscad_parser/releases"
 "Usage" = "https://github.com/belfryscad/openscad_parser/README.rst"
 "Documentation" = "https://github.com/belfryscad/openscad_parser/WRITING_DOCS.md"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "-v"
