Add serialization support for AST trees in JSON and YAML formats
- Introduced functions for converting ASTs to and from JSON and YAML.
- Updated README and documentation to include serialization details.
- Added tests for serialization functionality to ensure correctness.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "uv_build"
 
 [project]
 name = "openscad_parser"
-version = "1.0.3"
+version = "2.0.1"
 description = "A PEG parser to read OpenSCAD language source code, with optional AST tree generation."
 readme = "README.rst"
 authors = [
@@ -38,6 +38,9 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
+]
+yaml = [
+    "PyYAML>=6.0",
 ]
 
 [project.urls]
